# dobutsu-shogi-master

./: COLAB.md  INSTRUCTIONS.md  README.md  index.html
client/: package-lock.json  package.json  tsconfig.json  vite.config.js
client/images/: setup.rb
client/src/: ai.ts  app.scss  app.ts  board.ts  index.html  move.ts  ui.ts
precomp/: Cargo.toml  Makefile
precomp/src/: 1-enum.rs  2-analyze.rs  3-extract.rs  9-test.rs  board.rs  decode.rb  encode.rb  lib.rs  rules.rs
val1n/: index.html  rules.txt
val1n/assets/: index-B1pzzxHp.js  index-B_iM0Ftn.css  index-nygZvTyy.css
vqp2a/: index.html  rules.txt
vqp2a/assets/: index-4-dX8Fgh.js  index-9CZo2y-C.css  index-CRnHUhDv.css
vqpeu/: index.html  rules.txt
vqpeu/assets/: index-DZDoq6Jd.css  index-De_1CraR.css
